[Update] setting up composer and class structure

--- a/v2/composer.json
+++ b/v2/composer.json
@@ -9,6 +9,11 @@
             "email": "ngandubernard@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Befree//": "src"
+        }
+    },
     "minimum-stability": "stable",
     "require": {}
 }
