--- a/v2/composer.json
+++ b/v2/composer.json
@@ -1,19 +1,22 @@
 {
-    "name": "bernard-ng/befree",
-    "description": "Website Security, Antivirus & Firewall || a powerful application that can secure your website against hackers, attacks and other incidents of abuse",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "bernard-ng",
-            "email": "ngandubernard@gmail.com"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "Befree//": "src"
-        }
-    },
-    "minimum-stability": "stable",
-    "require": {}
+  "name": "bernard-ng/befree",
+  "description": "Website Security, Antivirus & Firewall || a powerful application that can secure your website against hackers, attacks and other incidents of abuse",
+  "type": "library",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "bernard-ng",
+      "email": "ngandubernard@gmail.com"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Befree//": "src"
+    }
+  },
+  "minimum-stability": "stable",
+  "require": {
+    "php-di/php-di": "^5.4",
+    "robmorgan/phinx": "^0.10.6"
+  }
 }
