--- a/v2/composer.json
+++ b/v2/composer.json
@@ -11,7 +11,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Befree//": "src"
+      "Befree\\": "src"
     }
   },
   "minimum-stability": "stable",
