[Add] writing container config

--- a/v2/composer.json
+++ b/v2/composer.json
@@ -17,6 +17,7 @@
   "minimum-stability": "stable",
   "require": {
     "php-di/php-di": "^5.4",
-    "robmorgan/phinx": "^0.10.6"
+    "robmorgan/phinx": "^0.10.6",
+    "twig/twig": "^2.5"
   }
 }
