--- a/v2/composer.json
+++ b/v2/composer.json
@@ -20,6 +20,7 @@
     "robmorgan/phinx": "^0.10.6",
     "twig/twig": "^2.5",
     "guzzlehttp/guzzle": "^6.3",
-    "squizlabs/php_codesniffer": "^3.3"
+    "squizlabs/php_codesniffer": "^3.3",
+    "symfony/console": "^4.2"
   }
 }
